# Habit_Tracker

./: .gitignore  README.md  pyproject.toml  requirements.txt
Dev documentation/: Criação de habitos.md
src/: main.py
src/HabitTracker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/appmain/: assets.py  mainwindow.py
src/appmain/common/: animations.py  calendar_example.py  clickable_label.py  example.py  heatmap.py  shadows.py  spinbox_custom.py
src/appmain/database/: create.py  custom.py  database.py  delete.py  read.py  update.py
src/appmain/features/chronometer/: chronometer_dialogs.py  chronometer_logic.py  chronometer_widget.py  style_skill.qss
src/appmain/features/creation/: creation_widget.py  style.qss
src/appmain/features/goals/: container_goal.py  goals_dialog.py  goals_widget.py  style_goals.qss
src/appmain/features/greeting/: greeting.py
src/appmain/features/home/: home_widget.py  style.qss
src/appmain/features/home/home_containers/: heatmap.py  incomplete_goals.py  (+1 more)
src/appmain/features/pomodoro/: configwindow.py  pomogui.py  pomothread.py
src/appmain/features/skill_interface/: skill_interface.py  style_skill_interface.qss
src/appmain/features/skill_master/: skills_master_widget.py
src/appmain/features/skills_list/: create_skill_dialog.py  delete_skill_dialog.py  rename_skill_dialog.py  skill_interface.py  skills_list_ui.py  skills_master_widget.py  style_skill.qss
src/appmain/features/timer/: timer.py  timer_dialog.py  timer_logic.py  timer_main.py  timer_ui.py
src/appmain/main_window/: main_window.py  main_window.qss
(+1 files in other folders)
