[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HabitTracker"
version = "0.1.0"   
authors = [
  { name="Allan Kennedy", email="seu-email@exemplo.com" },
    {name = "Arthur Castro"}
]
description = "Habit Tracker prototype"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyqt6",
]


[tool.setuptools.packages.find]
where = ["src"]

